--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -4,3 +4,9 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+  db:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: supersecretpassword1
