--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,8 @@ services:
       context: ""
       dockerfile: Dockerfile
   db:
-    image: mysql
-    cap_add:
-      - SYS_NICE
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
+    image: linuxserver/mariadb
+    restart: unless-stopped
     ports:
     - "3306:3306"
     environment:
